syntax = "proto3";

package wallet;
import "Proto/cdr/cdr.proto";

option go_package = "github.com/leepala/OldGeneralBackend/Proto/wallet";

service Wallet {
    rpc GetCurrentGold(GetCurrentGoldRequest) returns (GetCurrentGoldReply);
    rpc UpdateGold(UpdateGoldRequest) returns (UpdateGoldReply);
    rpc InitWallet(InitWalletRequest) returns (InitWalletReply);

    rpc FetchWaterFlow(FetchWaterFlowRequest) returns (FetchWaterFlowReply);
}

message GetCurrentGoldRequest {
    string request_id = 1;
    int64 request_time = 2;
    string user_id = 3;
}

message GetCurrentGoldReply {
    string request_id = 1;
    int64 reply_time = 2;
    int64 gold_num = 3;
}

message UpdateGoldRequest {
    string request_id = 1;
    int64 request_time = 2;
    string user_id = 3;
    int64 gold_num = 4;
    string content = 5;
}

message UpdateGoldReply {
    string request_id = 1;
    int64 reply_time = 2;
}

message FetchWaterFlowRequest {
    string request_id = 1;
    int64 request_time = 2;
    string user_id = 3;
    int64 page_num = 4;
    int64 page_size = 5;
}

message FetchWaterFlowReply {
    string request_id = 1;
    int64 reply_time = 2;
    repeated cdr.WaterFlow water_flow = 4;
}

message InitWalletRequest {
    string request_id = 1;
    int64 request_time = 2;
    string user_id = 3;
}

message InitWalletReply {
    string request_id = 1;
    int64 reply_time = 2;
}